# cmake-libs-test

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile.sh
.github/workflows/: ubuntu-2404.yml
approvals/: CMakeLists.txt  gcd_catch2.cpp  gcd_catch2.gcd.approved.txt  gcd_doctest.cpp
armadillo/: CMakeLists.txt  armadillo_main.cpp
benchmark/: CMakeLists.txt  fastsort.cpp  fastsort.hpp  fastsort_bm.cpp
catch2/: CMakeLists.txt  factorial_catch2.cpp
doctest/: CMakeLists.txt  example.cpp  example.hpp  example_test.cpp  factorial.cpp  factorial.hpp  factorial_doctest.cpp  factorial_test.cpp
factorial/: CMakeLists.txt  factorial.cpp  factorial.hpp
fmt/: CMakeLists.txt  fmt_example.cpp
mathgl/: CMakeLists.txt  mathgl_main.cpp
matplotplusplus/: CMakeLists.txt  matplotplusplus_main.cpp
matplotpp/: CMakeLists.txt
sanitizers/: CMakeLists.txt  abort_exit.cpp  data_race.cpp  double_free.cpp  heap_overflow.cpp  memory_leak.cpp  noinit.cpp  stack_smashing.cpp  ubsan.cpp  undefined_behavior.cpp  use_after_free.cpp
